Added parsers/reader, configured structure of service, added tests for parser and reader